--- a/assets/sass/inc/_i-setting.scss
+++ b/assets/sass/inc/_i-setting.scss
@@ -40,7 +40,10 @@ $color-blu2: #008BBA; //#0075BC;
 $color-blu3: #0075BC;
 $color-blu4: #0F68B2;
 $color-light-blu: #ECF1FA;
+$color-light-blu2: #C6E3FF;
 $color-yel: #FFEA00;
+$color-light-yel: #FFF6A3;
+$color-heavy-yel: #fae24c;
 $color-grn: #009EA7;
 $color-grn2: #009AB5; //#009AB5
 $color-grn3: #ebf6f9;
