--- a/assets/sass/layout/_l-header.scss
+++ b/assets/sass/layout/_l-header.scss
@@ -7,6 +7,9 @@ l-header
 html { scroll-behavior: smooth;}
 :target {
   scroll-margin-top: 80px;
+  @include inc.mq(tabs) {
+    scroll-margin-top: 100px;
+  }
   @include inc.mq(vr) {
     scroll-margin-top: 120px;
   }
@@ -20,6 +23,9 @@ html { scroll-behavior: smooth;}
   height: 60px;
   background-color: inc.$color-wht;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+  @include inc.mq(tabs) {
+    height: 80px;
+  }
   @include inc.mq(vr) {
     height: 100px;
   }
