--- a/assets/sass/object/component/_c-arrow.scss
+++ b/assets/sass/object/component/_c-arrow.scss
@@ -9,6 +9,7 @@ c-arrow
   height: 58px;
   border-radius: 35px;
   border: 1px solid inc.$color-blu;
+  box-sizing: border-box;
   margin: 0 auto;
   position: relative;
   z-index: 2;
@@ -26,13 +27,41 @@ c-arrow
     display: grid;
     align-items: center;
     @include inc.sizingRem(font-size, wide, 18px, sp, 14px);
-    background: url(../img/arw/blue_right.svg) no-repeat calc(100% - 1.5rem) 50% inc.$color-wht;
-    @include inc.mq(vr) {
-      // background-size: 20px;
-      // background-position: calc(100% - 3rem) 50%;
+    //background: url(../img/arw/blue_right.svg) no-repeat calc(100% - 1.5rem) 50% inc.$color-wht;
+    background: inc.$color-wht;
+    position: relative;
+    -webkit-transition: all 0.1s ease-out;
+    transition: all 0.1s ease-out;
+    transition: background-color 0.3s linear;
+    &::after {
+      -webkit-transition: all 0.1s ease-out;
+      transition: all 0.1s ease-out;
+      content: "";
+      width: 18px;
+      height: 18px;
+      background: url(../img/arw/blue_right.svg) no-repeat 50% 50%;
+      background-size: contain;
+      position: absolute;
+      right: 13%;
+      top: 50%;
+      transform: translate(0, -50%);
     }
   }
   &.left {
     margin: 0;
   }
+  @media (hover: hover) {
+    &:hover {
+      border: 1px solid inc.$color-wht;
+      span {
+        color: inc.$color-wht;
+        background: inc.$color-blu;
+        &::after {
+          right: 12.3%;
+        }
+      }
+    }
+  }
 }
+
+
