--- a/assets/sass/object/project/_p-text-box.scss
+++ b/assets/sass/object/project/_p-text-box.scss
@@ -11,21 +11,27 @@ p-text-box
     @include inc.sizing(border-width, wide, 7px, sp, 3px);
     @include inc.sizing(border-radius, wide, 16px, sp, 8px);
     &--h2 {
-      @include inc.sizingRem(font-size, wide, 20px, sp, 16px);
-      @include inc.sizing(line-height, wide, 32px, sp, 24px);
+      @include inc.sizingRem(font-size, wide, 30px, sp, 16px);
+      @include inc.sizing(line-height, wide, 42px, sp, 28px);
       font-weight: 700;
       color:inc.$color-blu;
       text-align: center;
       background: inc.$color-light-blu;
       @include inc.sizing(padding-top, wide, 24px, sp, 16px);
-      @include inc.sizing(padding-bottom, wide, 24px, sp, 16px);
+      @include inc.sizing(padding-bottom, wide, 32px, sp, 20px);
       padding-left: 1rem;
       padding-right: 1rem;
       span {
         @include inc.sizingRem(font-size, wide, 14px, sp, 12px);
         display: block;
         font-weight: 500;
-        @include inc.sizing(margin-bottom, wide, 24px, sp, 16px);
+        @include inc.sizing(margin-bottom, wide, 18px, sp, 0px);
+      }
+      br {
+        display: block;
+        @include inc.mq(tab) {
+          display: none;
+        }
       }
     }
     &--inner {
@@ -39,16 +45,21 @@ p-text-box
         gap: 1.5rem 2.5rem;
       }
       figure {
+        display: block;
         order: 1;
         @include inc.mq(tab) {
+          display: none;
           order: 2;
         }
         img {
           margin: 0 auto 1rem;
-          width: 50%;
+          //width: 50%;
+          height: 160px;
+          width: auto;
           @include inc.mq(tab) {
             margin: 0;
             width: 100%;
+            height: auto;
           }
         }
       }
@@ -56,8 +67,10 @@ p-text-box
     &--dl {
       @include inc.sizing(margin-bottom, wide, 48px, sp, 32px);
       order: 2;
+      padding-right: 0;
       @include inc.mq(tab) {
         order: 1;
+        padding-right: 200px;
       }
     }
     &--dl > div {
@@ -79,7 +92,11 @@ p-text-box
     }
     &--dd {
       @include inc.sizingRem(font-size, wide, 16px, sp, 14px);
+      line-height: 2;
     }
+    // &--flow--outer {
+    //   margin-top: -48px;
+    // }
     &--flow {
       position: relative;
     }
@@ -108,150 +125,99 @@ p-text-box
       @include inc.sizing(margin-top, wide, 32px, sp, 28px);
     }
   }
-  // & > p:not(:last-child) {
-  //   margin-bottom: 1em;
-  // }
-  // & > ul > li:not(:last-child) {
-  //   margin-bottom: 0.8em;
-  // }
-  // & > p > a,
-  // & > ul > li > a {
-  //   position: relative;
-  //   width: fit-content;
-  //   &::after {
-  //     transition: all 0.09s ease-out;
-  //     content: "";
-  //     height: 1px;
-  //     width: 100%;
-  //     position: absolute;
-  //     display: block;
-  //     bottom: -10px;
-  //     left: 0;
-  //     background-color: inc.$color-blu;
-  //     transform: scale(0, 1);
-  //     transform-origin: left top;
-  //   }
-  //   &:hover {
-  //     &::after {
-  //       transform: scale(1, 1);
-  //     }
-  //   }
-  // }
-  // & > ul > li > a {
-  //   display: flex;
-  //   align-items: center;
-  // }
-  // & > blockquote {
-  //   @include inc.sizing(padding, wide, 30px, sp, 20px);
-  //   @include inc.sizingRem(font-size, wide, 14px, sp, 12px);
-  //   @include inc.sizing(line-height, wide, 26px, sp, 22px);
-  //   font-weight: 400;
-  //   background-color: #f3f3f3;
-  //   @include inc.sizing(margin-bottom, wide, 49px, sp, 35px);
-  // }
-  // & div > ul {
-  //   @include inc.sizing(margin-bottom, wide, 49px, sp, 35px);
-  // }
-  // & div > table {
-  //   @include inc.sizing(margin-bottom, wide, 49px, sp, 35px);
-  // }
-  // &__figure {
-  //   width: 100%;
-  //   height: auto;
-  //   & > img {
-  //     width: 100%;
-  //     height: auto;
-  //   }
-  //   &--support {
-  //     @include inc.mq(lap) {
-  //       width: 50%;
-  //     }
-  //   }
-  // }
-  // &__ol {
-  //   @include inc.sizingRem(font-size, wide, 16px, sp, 13px);
-  //   @include inc.sizing(line-height, wide, 32px, sp, 24px);
-  //   font-weight: 400;
-  //   list-style-type: decimal;
-  //   padding-left: 1em;
-  //   margin-bottom: 1em;
-  //   margin-left: 1em;
-  // }
-  // &__ul {
-  //   list-style: "・";
-  //   padding-left: 1em;
-  //   & > li {
-  //     margin-bottom: 0 !important;
-  //   }
-  // }
-  // &__vimeo {
-  //   @include inc.sizing(margin-top, wide, 66px, sp, 33px);
-  //   @include inc.sizing(margin-bottom, wide, 66px, sp, 33px);
-  // }
-  // &__figure-box {
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: space-between;
-  //   @include inc.sizing(margin-bottom, wide, 26px, sp, 15px);
-  //   width: 100%;
-  //   @include inc.mq(spl) {
-  //     flex-direction: row;
-  //   }
-  //   & > figure {
-  //     padding-bottom: 2em;
-  //     width: 100%;
-  //     @include inc.mq(spl) {
-  //       width: 48%;
-  //     }
-  //     & > img {
-  //       @include inc.sizing(border-radius, wide, 10px, sp, 5px);
-  //       aspect-ratio: 4/3;
-  //       width: 100%;
-  //       height: auto;
-  //       object-fit: cover;
-  //     }
-  //     & > figcaption {
-  //       @include inc.sizingRem(font-size, wide, 13px, sp, 10px);
-  //       margin-top: 1em;
-  //     }
-  //   }
-  // }
-  // &__margin-bottom {
-  //   margin-bottom: 3em !important;
-  // }
-  // &__list-disc {
-  //   list-style-type: "・";
-  //   padding-left: 0.7em;
-  // }
-  // &__indent {
-  //   @include inc.sizing(margin-top, wide, 30px, sp, 20px);
-  //   @include inc.sizing(padding-left, wide, 25px, sp, 18px);
-  //   & > h3 {
-  //     margin-bottom: 0.5em;
-  //   }
-  // }
-  // &__annotation {
-  //   @include inc.sizingRem(font-size, wide, 13px, sp, 10px);
-  //   @include inc.sizing(line-height, wide, 26px, sp, 22px);
-  //   font-weight: 400;
-  //   & > p {
-  //     padding-left: 1.2em;
-  //     &::before {
-  //       content: "※";
-  //       margin-left: -1.2em;
-  //     }
-  //   }
-  //   & > p.p-text-box__annotation-head {
-  //     padding-left: 0;
-  //     &::before {
-  //       content: none;
-  //     }
-  //   }
-  // }
 }
-// #counter:target {
-//   scroll-margin-top: 60px;
-//   @include inc.mq(vr) {
-//     scroll-margin-top: 100px;
-//   }
-// }
+
+#about {
+  .p-text-box {
+    &--bluBox {
+      &--h2 {
+        @include inc.sizing(padding-top, wide, 18px, sp, 12px);
+        @include inc.sizing(padding-bottom, wide, 24px, sp, 16px);
+        @include inc.sizingRem(font-size, wide, 20px, sp, 16px);
+      }
+    }
+  }
+}
+
+#case01,
+#case02,
+#case03,
+#case04,
+#case05,
+#case06,
+#case07,
+#case08 {
+  .case_img {
+    position: relative;
+    &::after {
+      content: "";
+      width: 200px;
+      height: 200px;
+      background: url(../img/case/case_01.png) no-repeat 50% 50%;
+      background-size: contain;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      display: none;
+      @include inc.mq(tab) {
+        display: block;
+      }
+    }
+  }
+}
+#case02 {
+  .case_img {
+    &::after {
+      background: url(../img/case/case_02.png) no-repeat 50% 50%;
+      background-size: contain;
+    }
+  }
+}
+#case03 {
+  .case_img {
+    &::after {
+      background: url(../img/case/case_03.png) no-repeat 50% 50%;
+      background-size: contain;
+    }
+  }
+}
+#case04 {
+  .case_img {
+    &::after {
+      background: url(../img/case/case_04.png) no-repeat 50% 50%;
+      background-size: contain;
+    }
+  }
+}
+#case05 {
+  .case_img {
+    &::after {
+      background: url(../img/case/case_05.png) no-repeat 50% 50%;
+      background-size: contain;
+    }
+  }
+}
+#case06 {
+  .case_img {
+    &::after {
+      background: url(../img/case/case_06.png) no-repeat 50% 50%;
+      background-size: contain;
+    }
+  }
+}
+#case07 {
+  .case_img {
+    &::after {
+      background: url(../img/case/case_07.png) no-repeat 50% 50%;
+      background-size: contain;
+    }
+  }
+}
+#case08 {
+  .case_img {
+    &::after {
+      background: url(../img/case/case_08.png) no-repeat 50% 50%;
+      background-size: contain;
+    }
+  }
+}
