--- a/assets/sass/object/project/_p-home.scss
+++ b/assets/sass/object/project/_p-home.scss
@@ -483,3 +483,31 @@ p-home
 .slider-main .swiper-wrapper{
   transition-timing-function: linear;
 }
+
+
+
+
+.main-slide01 {
+  .swiper-wrapper {
+    transition-timing-function: linear;
+    .swiper-slide {
+      margin: 0;
+    }
+  }
+}
+.main-slide02 {
+  .swiper-wrapper {
+    transition-timing-function: linear;
+    .swiper-slide {
+      margin: 0;
+    }
+  }
+}
+.main-slide03 {
+  .swiper-wrapper {
+    transition-timing-function: linear;
+    .swiper-slide {
+      margin: 0;
+    }
+  }
+}
