--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ l-wrapper
 }
 @media screen and (min-width: 900px) {
   .l-wrapper.home {
-    padding: 0 2rem;
+    padding: 0 6%;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -2755,6 +2755,26 @@ p-link-box
 /*
 p-home
 -----------------------------------------------------*/
+.list02 {
+  padding: 24px 0 !important;
+  margin: 0 auto !important;
+  display: block;
+  max-width: 305px;
+  width: 100%;
+}
+@media screen and (min-width: 900px) {
+  .list02 {
+    display: none;
+  }
+}
+.list02 .p-home--main-list-item {
+  max-width: 100%;
+  width: 100%;
+  height: 60px;
+  border-radius: 30px;
+  list-style-type: none;
+}
+
 .p-home {
   position: relative;
 }
@@ -2774,26 +2794,6 @@ p-home
 }
 .p-home--main--outer {
   position: relative;
-}
-.p-home--main--outer .list02 {
-  display: block;
-  padding-top: clamp(24px, 1.82vw + 15.6px, 32px);
-  padding-bottom: clamp(24px, 1.82vw + 15.6px, 32px);
-  max-width: 305px;
-  width: 100%;
-  margin: 0 auto;
-}
-@media screen and (min-width: 900px) {
-  .p-home--main--outer .list02 {
-    display: none;
-  }
-}
-.p-home--main--outer .list02 .p-home--main-list-item {
-  max-width: 100%;
-  width: 100%;
-  height: 60px;
-  border-radius: 30px;
-  list-style-type: none;
 }
 .p-home--main h1 {
   font-size: clamp(2.125rem, 2.08vw + 1.525rem, 3.5625rem);
@@ -3270,33 +3270,69 @@ p-home
             transform: rotateY(-180deg);
   }
 }
-.swiper-slide {
+.card-slide {
   width: 260px;
   height: auto;
   margin: 0 24px;
 }
 @media screen and (min-width: 768px) {
-  .swiper-slide {
+  .card-slide {
     width: 307px;
     height: 343px;
     margin: 0 32px;
   }
 }
 
-.sample-slider {
+.card-slider {
   width: 100%;
   overflow: hidden;
   padding: 0 0 24px !important;
 }
 @media screen and (min-width: 768px) {
-  .sample-slider {
+  .card-slider {
     padding: 64px 0 !important;
   }
 }
 
-.sample-slider .swiper-wrapper {
+.card-slider .swiper-wrapper {
   -webkit-transition-timing-function: linear;
           transition-timing-function: linear;
+}
+
+.area-scroll {
+  height: clamp(520px, 25.27vw + 403.8px, 800px);
+  width: 100%;
+  overflow: hidden;
+}
+
+.main-slide-p {
+  width: 240px;
+  height: auto;
+}
+.main-slide-p img {
+  width: 100%;
+  height: auto;
+}
+@media screen and (min-width: 768px) {
+  .main-slide-p {
+    width: 240px;
+    height: 240px;
+  }
+}
+
+.main-slide-b {
+  width: 240px;
+  height: auto;
+}
+.main-slide-b img {
+  width: 100%;
+  height: auto;
+}
+@media screen and (min-width: 768px) {
+  .main-slide-b {
+    width: 240px;
+    height: 240px;
+  }
 }
 
 .slider-main {
@@ -3319,6 +3355,96 @@ p-home
           transition-timing-function: linear;
 }
 
+.main-slide00 {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  position: relative;
+  top: auto;
+  z-index: -1;
+}
+@media screen and (min-width: 540px) {
+  .main-slide00 {
+    right: 10vw;
+  }
+}
+@media screen and (min-width: 768px) {
+  .main-slide00 {
+    right: 0vw;
+  }
+}
+@media screen and (min-width: 900px) {
+  .main-slide00 {
+    right: -10vw;
+  }
+}
+@media screen and (min-width: 1025px) {
+  .main-slide00 {
+    right: -20vw;
+  }
+}
+@media screen and (min-width: 1201px) {
+  .main-slide00 {
+    right: -20vw;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .main-slide00 {
+    right: -30vw;
+  }
+}
+@media screen and (min-width: 1568px) {
+  .main-slide00 {
+    right: -50vw;
+  }
+}
+
+.main-slide01 {
+  width: 100vw;
+  height: 20vw;
+  position: absolute;
+  top: -52vw;
+  left: 0;
+}
+@media screen and (min-width: 540px) {
+  .main-slide01 {
+    top: -47vw;
+  }
+}
+@media screen and (min-width: 768px) {
+  .main-slide01 {
+    top: -40vw;
+  }
+}
+@media screen and (min-width: 900px) {
+  .main-slide01 {
+    top: -49vw;
+  }
+}
+@media screen and (min-width: 1025px) {
+  .main-slide01 {
+    top: -42vw;
+  }
+}
+@media screen and (min-width: 1201px) {
+  .main-slide01 {
+    top: -42vw;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .main-slide01 {
+    top: -49vw;
+  }
+}
+@media screen and (min-width: 1568px) {
+  .main-slide01 {
+    top: -62vw;
+  }
+}
+@media screen and (min-width: 1700px) {
+  .main-slide01 {
+    top: -60vw;
+  }
+}
 .main-slide01 .swiper-wrapper {
   -webkit-transition-timing-function: linear;
           transition-timing-function: linear;
@@ -3327,6 +3453,53 @@ p-home
   margin: 0;
 }
 
+.main-slide02 {
+  width: 100vw;
+  height: 20vw;
+  position: absolute;
+  top: -22vw;
+  left: 0;
+}
+@media screen and (min-width: 540px) {
+  .main-slide02 {
+    top: -18vw;
+  }
+}
+@media screen and (min-width: 768px) {
+  .main-slide02 {
+    top: -16vw;
+  }
+}
+@media screen and (min-width: 900px) {
+  .main-slide02 {
+    top: -25vw;
+  }
+}
+@media screen and (min-width: 1025px) {
+  .main-slide02 {
+    top: -22vw;
+  }
+}
+@media screen and (min-width: 1201px) {
+  .main-slide02 {
+    top: -22vw;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .main-slide02 {
+    top: -28vw;
+  }
+}
+@media screen and (min-width: 1568px) {
+  .main-slide02 {
+    top: -42vw;
+  }
+}
+@media screen and (min-width: 1700px) {
+  .main-slide02 {
+    top: -40vw;
+  }
+}
 .main-slide02 .swiper-wrapper {
   -webkit-transition-timing-function: linear;
           transition-timing-function: linear;
@@ -3335,6 +3508,53 @@ p-home
   margin: 0;
 }
 
+.main-slide03 {
+  width: 100vw;
+  height: 20vw;
+  position: absolute;
+  top: 8vw;
+  left: 0;
+}
+@media screen and (min-width: 540px) {
+  .main-slide03 {
+    top: 12vw;
+  }
+}
+@media screen and (min-width: 768px) {
+  .main-slide03 {
+    top: 8vw;
+  }
+}
+@media screen and (min-width: 900px) {
+  .main-slide03 {
+    top: 0vw;
+  }
+}
+@media screen and (min-width: 1025px) {
+  .main-slide03 {
+    top: -2vw;
+  }
+}
+@media screen and (min-width: 1201px) {
+  .main-slide03 {
+    top: -1vw;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .main-slide03 {
+    top: -6vw;
+  }
+}
+@media screen and (min-width: 1568px) {
+  .main-slide03 {
+    top: -22vw;
+  }
+}
+@media screen and (min-width: 1700px) {
+  .main-slide03 {
+    top: -20vw;
+  }
+}
 .main-slide03 .swiper-wrapper {
   -webkit-transition-timing-function: linear;
           transition-timing-function: linear;
