--- a/assets/sass/object/project/_p-home.scss
+++ b/assets/sass/object/project/_p-home.scss
@@ -3,6 +3,26 @@
 /*
 p-home
 -----------------------------------------------------*/
+.list02 {
+  padding: 24px 0!important;
+  margin: 0 auto!important;
+  display: block;
+  // @include inc.sizing(padding-top, tab, 32px, sp, 24px);
+  // @include inc.sizing(padding-bottom, tab, 32px, sp, 24px);
+  max-width: 305px;
+  width: 100%;
+  @include inc.mq(tab) {
+    display: none;
+  }
+  .p-home--main-list-item {
+    max-width: 100%;
+    width: 100%;
+    height: 60px;
+    border-radius: 30px;
+    list-style-type: none;
+  }
+}
+
 .p-home {
   position: relative;
   &--main {
@@ -18,24 +38,7 @@ p-home
     }
     &--outer {
       position: relative;
-      .list02 {
-        display: block;
-        @include inc.sizing(padding-top, tab, 32px, sp, 24px);
-        @include inc.sizing(padding-bottom, tab, 32px, sp, 24px);
-        max-width: 305px;
-        width: 100%;
-        margin: 0 auto;
-        @include inc.mq(tab) {
-          display: none;
-        }
-        .p-home--main-list-item {
-          max-width: 100%;
-          width: 100%;
-          height: 60px;
-          border-radius: 30px;
-          list-style-type: none;
-        }
-      }
+      
     }
     @include inc.sizing(height, wide, 864px, sp, 528px);
     @include inc.sizing(padding-top, wide, 112px, sp, 24px);
@@ -445,7 +448,7 @@ p-home
   }
 }
 
-.swiper-slide {
+.card-slide {
   width: 260px;
   height:auto;
   margin: 0 24px;
@@ -456,7 +459,7 @@ p-home
   }
 }
 
-.sample-slider{
+.card-slider {
   width: 100%;
   overflow: hidden;
   padding: 0 0 24px!important;
@@ -464,10 +467,43 @@ p-home
     padding: 64px 0!important;
   }
 }
-.sample-slider .swiper-wrapper{
+.card-slider .swiper-wrapper{
   transition-timing-function: linear;
 }
 
+
+
+.area-scroll {
+  @include inc.sizing(height, wide, 800px, sp, 520px);
+  //height: 800px;
+  width: 100%;
+  overflow: hidden;
+}
+
+.main-slide-p {
+  width: 240px;
+  height:auto;
+  img {
+    width: 100%;
+    height: auto;
+  }
+  @include inc.mq(tabs) {
+    width: 240px;
+    height: 240px;
+  }
+}
+.main-slide-b {
+  width: 240px;
+  height:auto;
+  img {
+    width: 100%;
+    height: auto;
+  }
+  @include inc.mq(tabs) {
+    width: 240px;
+    height: 240px;
+  }
+}
 
 .slider-main {
   transform:rotate(-45deg);
@@ -480,14 +516,70 @@ p-home
     left: 15%;
   }
 }
-.slider-main .swiper-wrapper{
+
+.slider-main .swiper-wrapper {
   transition-timing-function: linear;
 }
 
-
-
-
+.main-slide00 {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  position: relative;
+  top: auto;
+  //right: -30vw;
+  z-index: -1;
+  @include inc.mq(spl) {
+    right: 10vw;
+  }
+  @include inc.mq(tabs) {
+    right: -0vw;
+  }
+  @include inc.mq(tab) {
+    right: -10vw;
+  }
+  @include inc.mq(lap) {
+    right: -20vw;
+  }
+  @include inc.mq(desk) {
+    right: -20vw;
+  }
+  @include inc.mq(vr) {
+    right: -30vw;
+  }
+  @include inc.mq(wide) {
+    right: -50vw;
+  }
+}
 .main-slide01 {
+  width: 100vw;
+  height: 20vw;
+  position: absolute;
+  top: -52vw;
+  @include inc.mq(spl) {
+    top: -47vw;
+  }
+  @include inc.mq(tabs) {
+    top: -40vw;
+  }
+  @include inc.mq(tab) {
+    top: -49vw;
+  }
+  @include inc.mq(lap) {
+    top: -42vw;
+  }
+  @include inc.mq(desk) {
+    top: -42vw;
+  }
+  @include inc.mq(vr) {
+    top: -49vw;
+  }
+  @include inc.mq(wide) {
+    top: -62vw;
+  }
+  @include inc.mq(full) {
+    top: -60vw;
+  }
+  left: 0;
   .swiper-wrapper {
     transition-timing-function: linear;
     .swiper-slide {
@@ -496,6 +588,35 @@ p-home
   }
 }
 .main-slide02 {
+  width: 100vw;
+  height: 20vw;
+  position: absolute;
+  top: -22vw;
+  @include inc.mq(spl) {
+    top: -18vw;
+  }
+  @include inc.mq(tabs) {
+    top: -16vw;
+  }
+  @include inc.mq(tab) {
+    top: -25vw;
+  }
+  @include inc.mq(lap) {
+    top: -22vw;
+  }
+  @include inc.mq(desk) {
+    top: -22vw;
+  }
+  @include inc.mq(vr) {
+    top: -28vw;
+  }
+  @include inc.mq(wide) {
+    top: -42vw;
+  }
+  @include inc.mq(full) {
+    top: -40vw;
+  }
+  left: 0;
   .swiper-wrapper {
     transition-timing-function: linear;
     .swiper-slide {
@@ -504,6 +625,35 @@ p-home
   }
 }
 .main-slide03 {
+  width: 100vw;
+  height: 20vw;
+  position: absolute;
+  top: 8vw;
+  @include inc.mq(spl) {
+    top: 12vw;
+  }
+  @include inc.mq(tabs) {
+    top: 8vw;
+  }
+  @include inc.mq(tab) {
+    top: 0vw;
+  }
+  @include inc.mq(lap) {
+    top: -2vw;
+  }
+  @include inc.mq(desk) {
+    top: -1vw;
+  }
+  @include inc.mq(vr) {
+    top: -6vw;
+  }
+  @include inc.mq(wide) {
+    top: -22vw;
+  }
+  @include inc.mq(full) {
+    top: -20vw;
+  }
+  left: 0;
   .swiper-wrapper {
     transition-timing-function: linear;
     .swiper-slide {
