--- a/assets/sass/object/project/_p-people.scss
+++ b/assets/sass/object/project/_p-people.scss
@@ -14,6 +14,16 @@ p-people
       gap: 2rem;
     }
     &--div {
+      &.on {
+        figure {
+          img {
+            opacity: 0;
+            @include inc.mq(tabs) {
+              opacity: 1;
+            }
+          }
+        }
+      }
       position: relative;
       display: block;
       width: 100%;
@@ -65,14 +75,14 @@ p-people
             right: -50px;
           }
         }
-        &.on {
-          img {
-            opacity: 0;
-            @include inc.mq(tabs) {
-              opacity: 1;
-            }
-          }
-        }
+        // &.on {
+        //   img {
+        //     opacity: 0;
+        //     @include inc.mq(tabs) {
+        //       opacity: 1;
+        //     }
+        //   }
+        // }
         &:hover {
           @include inc.mq(tabs) {
             img {
