--- a/assets/sass/object/project/_p-text-box.scss
+++ b/assets/sass/object/project/_p-text-box.scss
@@ -29,9 +29,9 @@ p-text-box
       }
       br {
         display: block;
-        @include inc.mq(tab) {
-          display: none;
-        }
+        // @include inc.mq(tab) {
+        //   display: none;
+        // }
       }
     }
     &--inner {
