--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1591,9 +1591,21 @@ p-header
 }
 .active.p-header .p-header__nav-item {
   border-bottom: 1px solid #1B6EC3;
-  padding: 0.8rem 1.2rem 0.8rem 0;
   background: url(../img/arw/blue_right.svg) no-repeat 99% 50%;
   background-size: 15px;
+}
+.active.p-header .p-header__nav-item a {
+  display: block;
+  padding: 0.8rem 0 0.8rem 0;
+}
+.active.p-header .p-header__nav-item a:hover::after {
+  display: none;
+}
+@media screen and (min-width: 1280px) {
+  .active.p-header .p-header__nav-item a {
+    display: inline-block;
+    padding: 0;
+  }
 }
 .active.p-header .p-header__nav-entry {
   width: 100%;
@@ -4167,6 +4179,11 @@ p-about
   position: relative;
   display: inline-block;
 }
+@media screen and (min-width: 1025px) {
+  .p-about--numbers .number.count-w {
+    width: 190px;
+  }
+}
 .p-about--numbers .number span.unit {
   font-size: clamp(1.0625rem, 1.26vw + 0.7rem, 1.9375rem);
   font-weight: 500;
@@ -4400,7 +4417,7 @@ p-about
             justify-content: center;
   }
   .p-about--numbers.numbers04 .p-about--numbers--flex .--center {
-    width: 184px;
+    width: 200px;
   }
   .p-about--numbers.numbers04 .p-about--numbers--flex figure {
     display: -webkit-box;
