--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,7 @@ l-nav
   border-left: 1px solid #1B6EC3;
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 1px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -282,7 +282,7 @@ l-nav
   background: url(../img/arw/blue_down.svg) no-repeat 0 0;
   background-size: contain;
   position: absolute;
-  top: 0;
+  top: -1px;
   left: clamp(14px, 0.18vw + 13.2px, 16px);
 }
 @media screen and (min-width: 1280px) {
@@ -457,6 +457,14 @@ l-hero
   line-height: clamp(24px, 0.36vw + 22.4px, 28px);
   padding-left: clamp(32px, 0vw + 32px, 32px);
   padding-right: clamp(32px, 0vw + 32px, 32px);
+}
+.l-hero--zadankai--text br.sp {
+  display: block;
+}
+@media screen and (min-width: 540px) {
+  .l-hero--zadankai--text br.sp {
+    display: none;
+  }
 }
 .l-hero--zadankai--people {
   width: 90%;
@@ -3040,7 +3048,7 @@ p-home
 }
 .p-home--zadankai {
   margin-bottom: clamp(64px, 1.44vw + 57.4px, 80px);
-  padding-top: clamp(80px, 7.22vw + 46.8px, 160px);
+  padding-top: clamp(110px, 4.51vw + 89.3px, 160px);
   padding-bottom: clamp(72px, 5.05vw + 48.8px, 128px);
   background: url(../img/top/zadankai_sp.png) no-repeat 50% 50%;
   background-size: cover;
@@ -3053,15 +3061,42 @@ p-home
 }
 .p-home--zadankai--title {
   text-align: center;
-  margin: 0 auto 20px;
+  margin: 0 auto 10px;
+}
+@media screen and (min-width: 768px) {
+  .p-home--zadankai--title {
+    margin: 0 auto 20px;
+  }
 }
 .p-home--zadankai--title img {
   display: block;
   margin: 0 auto;
+  width: 70%;
+}
+@media screen and (min-width: 768px) {
+  .p-home--zadankai--title img {
+    width: 100%;
+    max-width: 326px;
+  }
 }
 .p-home--zadankai--text {
   text-align: center;
   color: #fff;
+  font-size: 15px;
+  margin-bottom: 1rem !important;
+}
+@media screen and (min-width: 1280px) {
+  .p-home--zadankai--text {
+    font-size: 16px;
+  }
+}
+.p-home--zadankai--text br.sp {
+  display: block;
+}
+@media screen and (min-width: 900px) {
+  .p-home--zadankai--text br.sp {
+    display: none;
+  }
 }
 .p-home--case {
   display: -webkit-box;
@@ -5000,6 +5035,14 @@ p-people
 @media screen and (min-width: 900px) {
   .p-people--bnr--text {
     margin: 0 0 2rem;
+  }
+}
+.p-people--bnr--text br.sp {
+  display: block;
+}
+@media screen and (min-width: 540px) {
+  .p-people--bnr--text br.sp {
+    display: none;
   }
 }
 .p-people--bnr--people {
