--- a/assets/sass/layout/_l-hero.scss
+++ b/assets/sass/layout/_l-hero.scss
@@ -142,6 +142,12 @@ l-hero
         @include inc.sizing(line-height, wide, 28px, sp, 24px);
         @include inc.sizing(padding-left, wide, 32px, sp, 32px);
         @include inc.sizing(padding-right, wide, 32px, sp, 32px);
+        br.sp {
+            display: block;
+            @include inc.mq(spl) {
+                display: none;
+            }
+        }
     }
     &--people {
         width: 90%;
