--- a/assets/sass/object/project/_p-home.scss
+++ b/assets/sass/object/project/_p-home.scss
@@ -256,7 +256,7 @@ p-home
   }
   &--zadankai {
     @include inc.sizing(margin-bottom, wide, 80px, sp, 64px);
-    @include inc.sizing(padding-top, wide, 160px, sp, 80px);
+    @include inc.sizing(padding-top, wide, 160px, sp, 110px);
     @include inc.sizing(padding-bottom, wide, 128px, sp, 72px);
     background: url(../img/top/zadankai_sp.png) no-repeat 50% 50%;
     background-size: cover;
@@ -266,15 +266,34 @@ p-home
     }
     &--title {
       text-align: center;
-      margin: 0 auto 20px;
+      margin: 0 auto 10px;
+      @include inc.mq(tabs) {
+        margin: 0 auto 20px;
+      }
       img {
         display: block;
         margin: 0 auto;
+        width: 70%;
+        @include inc.mq(tabs) {
+          width: 100%;
+          max-width: 326px;
+        }
       }
     }
     &--text {
       text-align: center;
       color: inc.$color-wht;
+      font-size: 15px;
+      margin-bottom: 1rem!important;
+      @include inc.mq(vr) {
+        font-size: 16px;
+      }
+      br.sp {
+        display: block;
+        @include inc.mq(tab) {
+          display: none;
+        }
+      }
     }
   }
   &--case {
